# SlicerIGT

./: CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  PerkNavLogoDesign.xcf  README.md  SlicerIGTLogoDesign.xcf  SuperBuild.cmake  VolumeResliceDriverLogoDesign.xcf
ExampleGuidelet/: CMakeLists.txt  ExampleGuidelet.xcf
ExampleGuidelet/ExampleGuidelet/: ExampleGuidelet.py
Guidelet/: CMakeLists.txt  GuideletLoadable.py  __init__.py
Guidelet/GuideletLib/: Guidelet.py  Guidelet.qrc  GuideletFrame.py  StyleSheet.py  UltraSound.py  __init__.py
GuideletLib/: CMakeLists.txt  GuideletLoadable.py  __init__.py
LandmarkDetection/Testing/Cxx/: CMakeLists.txt  vtkLandmarkDetectionTest.cxx
OpenIGTLinkRemote/: CMakeLists.txt  README.md  qSlicerIGTLRemoteModule.cxx  qSlicerIGTLRemoteModule.h  qSlicerIGTLRemoteModuleWidget.cxx  qSlicerIGTLRemoteModuleWidget.h  qSlicerOpenIGTLinkRemoteModule.cxx  qSlicerOpenIGTLinkRemoteModule.h  qSlicerOpenIGTLinkRemoteModuleWidget.cxx  qSlicerOpenIGTLinkRemoteModuleWidget.h
OpenIGTLinkRemote/Documentation/: OpenIGTLinkRemote.dox
OpenIGTLinkRemote/Logic/: CMakeLists.txt  vtkSlicerOpenIGTLinkCommand.cxx  vtkSlicerOpenIGTLinkCommand.h  vtkSlicerOpenIGTLinkRemoteLogic.cxx  vtkSlicerOpenIGTLinkRemoteLogic.h  vtkSlicerOpenIGTLinkRemoteQueryLogic.cxx  vtkSlicerOpenIGTLinkRemoteQueryLogic.h
OpenIGTLinkRemote/MRML/: CMakeLists.txt  vtkIGTLToMRMLAnnotationText.cxx  vtkIGTLToMRMLAnnotationText.h  vtkIGTLToMRMLRemoteExec.cxx  vtkIGTLToMRMLRemoteExec.h  vtkMRMLOpenIGTLinkRemoteNode.cxx  vtkMRMLOpenIGTLinkRemoteNode.h  vtkMRMLRemoteExecNode.cxx  vtkMRMLRemoteExecNode.h  vtkMRMLTextNode.cxx  vtkMRMLTextNode.h
OpenIGTLinkRemote/Resources/: qSlicerOpenIGTLinkRemoteModule.qrc
OpenIGTLinkRemote/Resources/UI/: qSlicerIGTLRemoteModule.ui  qSlicerOpenIGTLinkRemoteFooBarWidget.ui  qSlicerOpenIGTLinkRemoteModuleWidget.ui
OpenIGTLinkRemote/Widgets/: CMakeLists.txt  qSlicerOpenIGTLinkRemoteCommandWidget.cxx  qSlicerOpenIGTLinkRemoteCommandWidget.h  qSlicerOpenIGTLinkRemoteFooBarWidget.cxx  qSlicerOpenIGTLinkRemoteFooBarWidget.h  qSlicerOpenIGTLinkRemoteModuleWidget.cxx  qSlicerOpenIGTLinkRemoteModuleWidget.h  qSlicerOpenIGTLinkRemoteQueryWidget.cxx  qSlicerOpenIGTLinkRemoteQueryWidget.h
OpenIGTLinkRemote/jt_IGTLRemote/: CMakeLists.txt
OpenIGTLinkRemote/jt_IGTLRemote/Logic/: vtkSlicerIGTLRemoteLogic.cxx
OpenIGTLinkRemote/jt_IGTLRemote/Resources/: qSlicerIGTLRemoteModule.qrc
PathExplorer/: CMakeLists.txt  qSlicerPathExplorerModule.cxx  qSlicerPathExplorerModule.h  qSlicerPathExplorerModuleWidget.cxx  qSlicerPathExplorerModuleWidget.h
PathExplorer/Logic/: CMakeLists.txt  vtkSlicerPathExplorerLogic.cxx  vtkSlicerPathExplorerLogic.h
PathExplorer/MRML/: CMakeLists.txt  vtkMRMLPathPlannerTrajectoryNode.cxx  vtkMRMLPathPlannerTrajectoryNode.h
PathExplorer/PathExplorer/: qSlicerPathExplorerModuleWidget.cxx  qSlicerPathExplorerModuleWidget.h
PathExplorer/PathExplorer/Logic/: vtkSlicerPathExplorerLogic.cxx  vtkSlicerPathExplorerLogic.h
PathExplorer/PathExplorer/Resources/: qSlicerPathExplorerModule.qrc
PathExplorer/PathExplorer/Widgets/: qSlicerPathExplorerMarkupsTableWidget.cxx  qSlicerPathExplorerReslicingWidget.cxx
PathExplorer/Resources/: qSlicerPathExplorerModule_rc.py
PathExplorer/Resources/UI/: qSlicerPathExplorerMarkupsTableWidget.ui  qSlicerPathExplorerModuleWidget.ui  qSlicerPathExplorerReslicingWidget.ui  qSlicerPathExplorerTrajectoryTableWidget.ui
PathExplorer/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyPathExplorerPlugin.cxx  qSlicerSubjectHierarchyPathExplorerPlugin.h
PathExplorer/SubjectHierarchyPlugins/Resources/: qSlicerPathExplorerSubjectHierarchyPlugins.qrc  qSlicerPathExplorerSubjectHierarchyPlugins_rc.py
PathExplorer/Widgets/: CMakeLists.txt  qSlicerPathExplorerMarkupsTableWidget.cxx  qSlicerPathExplorerMarkupsTableWidget.h  qSlicerPathExplorerReslicingWidget.cxx  qSlicerPathExplorerReslicingWidget.h  qSlicerPathExplorerTrajectoryTableWidget.cxx  qSlicerPathExplorerTrajectoryTableWidget.h
PlusRemote/: CMakeLists.txt  PlusRemote.py  README.md
ToolWatchdog/: CMakeLists.txt  README.md  qSlicerToolBarManagerWidget.cxx  qSlicerToolBarManagerWidget.h  qSlicerToolWatchdogModule.cxx  qSlicerToolWatchdogModuleWidget.cxx  qSlicerToolWatchdogModuleWidget.h  qSlicerWatchdogModule.cxx  qSlicerWatchdogModule.h  qSlicerWatchdogModuleWidget.cxx  qSlicerWatchdogModuleWidget.h
ToolWatchdog/Logic/: CMakeLists.txt  QVTKSlicerWatchdogLogicInternal.h  vtkSlicerToolWatchdogLogic.cxx  vtkSlicerToolWatchdogLogic.h  vtkSlicerWatchdogLogic.cxx  vtkSlicerWatchdogLogic.h
ToolWatchdog/MRML/: CMakeLists.txt  vtkMRMLToolWatchdogNode.cxx  vtkMRMLToolWatchdogNode.h  vtkMRMLWatchdogNode.cxx  vtkMRMLWatchdogNode.h
ToolWatchdog/MRMLDM/: CMakeLists.txt
ToolWatchdog/Resources/: WatchedNodeUpToDate.bfxrsound  qSlicerToolWatchdogModule.qrc  qSlicerWatchdogModule.qrc
ToolWatchdog/Resources/UI/: qSlicerToolWatchdogFooBarWidget.ui  qSlicerToolWatchdogModuleWidget.ui  (+1 more)
ToolWatchdog/Widgets/: CMakeLists.txt  qMRMLToolWatchdogToolBar.cxx  qMRMLToolWatchdogToolBar.h  qMRMLWatchdogToolBar.cxx  qMRMLWatchdogToolBar.h  qSlicerToolWatchdogFooBarWidget.cxx  qSlicerToolWatchdogFooBarWidget.h
VolumeResliceDriver/: CMakeLists.txt  README.md  qSlicerRealTimeImagingModule.cxx  qSlicerRealTimeImagingModule.h  qSlicerRealTimeImagingModuleWidget.cxx  qSlicerRealTimeImagingModuleWidget.h  qSlicerReslicePropertyWidget.cxx  qSlicerReslicePropertyWidget.h  qSlicerVolumeResliceDriverModule.cxx  qSlicerVolumeResliceDriverModule.h  qSlicerVolumeResliceDriverModuleWidget.cxx  qSlicerVolumeResliceDriverModuleWidget.h
VolumeResliceDriver/Logic/: CMakeLists.txt  vtkSlicerRealTimeImagingLogic.cxx  vtkSlicerRealTimeImagingLogic.h  vtkSlicerVolumeResliceDriverLogic.cxx  vtkSlicerVolumeResliceDriverLogic.h
VolumeResliceDriver/Resources/: qSlicerRealTimeImagingModule.qrc  qSlicerVolumeResliceDriverModule.qrc  qSlicerVolumeResliceDriverModule_rc.py
VolumeResliceDriver/Widgets/: CMakeLists.txt  qSlicerReslicePropertyWidget.cxx  qSlicerReslicePropertyWidget.h
(+349 files in other folders)
